<?xml version="1.0" encoding="utf-8"?>
<resources>



    <!-- Nav Drawer Menu Items -->

 

    
    <string name="app_name">5odny Ma3ak</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>	
    <string name="login">Login</string>	
    <string name="register">Register</string>
    <string name="facebook">  Facebook  </string>
    <string name="google">  Google  </string>
    <string name="name">  Name  </string>
    <string name="date">  Date  </string>
    <string name="gender">  Gender  </string>
    <string name="gender_prompt">Choose your gender</string>
    <string name="notification"> Notification</string>
    <string name="from"> From</string>
    <string name="to"> To</string>
    <string name="event_name"> Name</string>
    <string name="circles"> Circles</string>
    <string name="no_of_slots"> Avaliable Slots</string>
    <string name="search_Result"> Search Result</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_sync_contacts">SyncContactsActivity</string>
    <string name="title_activity_edit_profile">EditProfileActivity</string>
    <string name="title_activity_edit_name">EditNameActivity</string>
    <string name="title_activity_edit_date">EditDateActivity</string>
    <string name="DatePicker">DatePicker</string>
    <string name="title_activity_go_to_circles">GoToCirclesActivity</string>
    <string name="title_activity_allcircles_list">CirclesListActivity</string>
    <string name="title_activity_circle_users">CircleActivity</string>
    <string name="title_circle_activity">Press the button to add friends to this circle</string>
    <string name="title_sync_contacts_view"></string>
    <string name="title_activity_add_circle">AddCircleActivity</string>
    <string name="title_add_circle">Add Circle</string>
    <string name="app_id">714850921894530</string>
    <string name="share">Share</string>

    
    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item >Feeds</item>
        <item >Notifications</item>
        <item >Events</item>
        <item >Circles</item>
        <item >Profile</item>
        <item >Search</item>
        <item >About</item>
    </string-array>
     
    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/feeds_icon</item>
        <item>@drawable/notifications_icon</item>
        <item>@drawable/events_ico</item>
        <item>@drawable/ic_action_group</item>
        <item>@drawable/ic_user</item>
        <item>@drawable/ic_action_search</item>
         <item>@drawable/ic_action_about1</item>
    </array>
     
    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_first_run">FirstRunActivity</string>
    <string name="title_activity_registeration">RegisterationActivity</string>

</resources>
