<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:background="@drawable/login_or_register_back" >
    
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    android:weightSum="100"
	    android:orientation="vertical"
	   >
	 <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:orientation="vertical"
	    android:layout_weight="10"
	    >
	    
	        <ImageView  
	        android:layout_width="match_parent"
	    	android:layout_height="match_parent"
	    	android:layout_gravity="left|top"
	    	android:src="@drawable/small_logo"
	    	android:contentDescription="@string/app_name"/>
	 
	     	
	 </LinearLayout>
	 
	  <LinearLayout
	      android:layout_width="match_parent"
	      android:layout_height="0dp"
	      android:layout_weight="50"
	      android:orientation="vertical"
	      android:paddingBottom="@dimen/activity_vertical_margin"
	      android:paddingLeft="@dimen/activity_horizontal_margin"
	      android:paddingRight="@dimen/activity_horizontal_margin"
	     >

	       <EditText
	        android:id="@+id/EmailTxt"
	        android:layout_gravity="center"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:maxLength="50"
	        android:hint="@string/email" 
	        android:textColorHint="#ffffff" 
	        android:textColor="#ffffff"
	        android:drawableLeft="@drawable/ic_action_email"
	        android:background="@drawable/text_back"
	        android:inputType="textEmailAddress" />
	       
	     <EditText
	          android:id="@+id/passwordTxt"
	          android:layout_gravity="center"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:maxLength="50"
	          android:layout_marginTop="6dp"
	          android:textColor="#ffffff"
	          android:ems="10" android:textColorHint="#ffffff"
	          android:drawableLeft="@drawable/ic_action_edit" 
	          android:background="@drawable/text_back"
	          android:hint="@string/password"
	          android:inputType="textPassword" />

	   
	</LinearLayout>
	
	 <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
			android:paddingLeft="@dimen/activity_horizontal_margin"
			android:paddingRight="@dimen/activity_horizontal_margin"
	        android:orientation="vertical"
	    	android:layout_weight="30">

		    <Button
		        android:id="@+id/LoginBtn"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:layout_marginTop="6dp"
		        android:background="#646365"
		        android:textColor="#ffffff"
		        android:alpha=".8"
		        android:text="@string/login" />
		    
		       <Button
		        android:id="@+id/registerBtn"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:layout_marginTop="6dp"
		        android:background="#646365"
		        android:textColor="#ffffff"
		        android:alpha=".8"
		        android:text="@string/register" />
		    
	 	<LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:orientation="horizontal">
		    	
		    <Button
		        android:id="@+id/FacebookBtn"
		        android:layout_width="wrap_content"
		        android:layout_gravity="center"
		        android:layout_height="wrap_content"
		        android:textColor="#ffffff"
		        android:background="#2652e0"
		        android:paddingRight="6dp"
		        android:alpha=".8"
		        android:layout_marginTop="6dp"
		        android:drawableLeft="@drawable/facebook"
		        android:text="@string/facebook" />
		
		    <Button
		        android:id="@+id/googleBtn"
		        android:layout_gravity="center"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="#ffffff"
		        android:alpha=".8"
		        android:layout_marginLeft="@dimen/activity_horizontal_margin"
		        android:background="#f33d25"
		        android:text="@string/google" 
		        android:layout_marginTop="6dp"
		        android:drawableLeft="@drawable/google"/>
		</LinearLayout>    
	</LinearLayout>
	
</LinearLayout>
</ScrollView>
