<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:background="@drawable/event_back" >
    
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	    android:orientation="vertical"
	   >

	       <EditText
	        android:id="@+id/eventNameTxt"
	        android:layout_gravity="center"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:ems="10"
	        android:maxLength="50"
	        android:hint="@string/event_name" 
	        android:textColorHint="#ffffff" 
	        android:drawableLeft="@drawable/ic_action_edit"
	        android:background="@drawable/text_back"
	        android:inputType="textPersonName" />
	       
	     <EditText
	          android:id="@+id/fromTxt"
	          android:layout_gravity="center"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:maxLength="50"
	          android:layout_marginTop="6dp"
	          android:ems="10" android:textColorHint="#ffffff"
	          android:drawableLeft="@drawable/ic_action_locate" 
	          android:background="@drawable/text_back"
	          android:hint="@string/from"
	          android:inputType="textAutoComplete" >
	          <requestFocus />
	    </EditText>
	  
	       <EditText
	          android:id="@+id/toTxt"
	          android:layout_gravity="center"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:maxLength="50"
	          android:layout_marginTop="6dp"
	          android:ems="10" android:textColorHint="#ffffff"
	          android:drawableLeft="@drawable/ic_action_locate" 
	          android:background="@drawable/text_back"
	          android:hint="@string/to"
	          android:inputType="textAutoComplete" >
	          
	    </EditText>
	         <EditText
	          android:id="@+id/dateTxt"
	          android:layout_gravity="center"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:maxLength="50"
	          android:layout_marginTop="6dp"
	          android:ems="10" android:textColorHint="#ffffff"
	          android:drawableLeft="@drawable/ic_action_edit" 
	          android:background="@drawable/text_back"
	          android:hint="@string/date"
	          android:inputType="textAutoComplete" >
	          
	    </EditText>
	        <EditText
	          android:id="@+id/no_of_slots"
	          android:layout_gravity="center"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"
	          android:maxLength="50"
	          android:layout_marginTop="6dp"
	          android:ems="10" android:textColorHint="#ffffff"
	          android:drawableLeft="@drawable/ic_action_edit" 
	          android:background="@drawable/text_back"
	          android:hint="@string/no_of_slots"
	          android:inputType="numberSigned" >
	          <requestFocus />
	    </EditText>
	   
	         
	       <Button
		        android:id="@+id/circlesBtn"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:layout_marginTop="6dp"
		        android:textColor="#ffffff"
		        android:alpha=".8"
		        android:background="@drawable/text_back"
		        android:drawableLeft="@drawable/ic_action_share"
		        android:text="@string/circles" />  
		        
	          <Button
		        android:id="@+id/addBtn"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:layout_marginTop="6dp"
		        android:textColor="#ffffff"
		        android:alpha=".8"
		        android:background="@drawable/text_back"
		        android:drawableLeft="@drawable/ic_action_share"
		        android:text="Add" />  
	
</LinearLayout>
</ScrollView>
