<?xml version="1.0" encoding="UTF-8"?>

    <ScrollView
        xmlns:tools="http://schemas.android.com/tools"
   		xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/ScrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        android:background="@color/background_color" 
        >


             <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="100"
                android:orientation="vertical"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin" >
        
        

                <ImageView
                    android:id="@+id/userImage"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="20"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_action_user" />
         

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="50"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin" >

                <EditText
                    android:id="@+id/PhoneTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/rect_shape"
                    android:drawableLeft="@drawable/ic_action_call"
                    android:ems="10"
                    android:textColor="#ffffff"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:hint="@string/phone"
                    android:inputType="phone"
                    android:maxLength="50"
                    android:textColorHint="#ffffff" />

                <EditText
                    android:id="@+id/nameTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/rect_shape"
                    android:drawableLeft="@drawable/ic_action_edit"
                    android:ems="10"
                    android:textColor="#ffffff"
                    android:hint="Username"
                    android:inputType="textPersonName"
                    android:maxLength="50"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:textColorHint="#ffffff" />

                <EditText
                    android:id="@+id/passwordTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="6dp"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:background="@drawable/rect_shape"
                    android:drawableLeft="@drawable/ic_action_edit"
                    android:ems="10"
                    android:textColor="#ffffff"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLength="50"
                    android:textColorHint="#ffffff" />

                <EditText
                    android:id="@+id/EmailTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/rect_shape"
                    android:drawableLeft="@drawable/ic_action_email"
                    android:ems="10"
                    android:textColor="#ffffff"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:textColorHint="#ffffff" >
                </EditText>

                <EditText
                    android:id="@+id/dateTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/rect_shape"
                    android:drawableLeft="@drawable/ic_action_edit"
                    android:editable="false"
                    android:textColor="#ffffff"
                    android:ems="10"
                    android:hint="Click to pick date"
                    android:maxLength="50"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:textColorHint="#ffffff" />

              

                    <RadioGroup
                        android:id="@+id/radioSexGroup"
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="10"
                        android:layout_marginTop="6dp"
                        android:gravity="center"
                        android:orientation="horizontal" >

                        <RadioButton
                            android:id="@+id/maleRadioBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="20dp"
                            android:button="@drawable/radio_button"
                            android:checked="true"
                            android:textColor="#ffffff"
                            android:text="Male" />

                        <RadioButton
                            android:id="@+id/femaleRadioBtn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="#ffffff"
                            android:button="@drawable/radio_button"
                            android:text="Female" />
                    </RadioGroup>


                    <Button
                        android:id="@+id/registerBtn"
                        android:layout_weight="10"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginTop="6dp"
                        android:background="@drawable/custom_btn"
                        android:text="@string/register"
                        android:textColor="@color/background_color" />
                    
				</LinearLayout>

            </LinearLayout>
       
    </ScrollView>
